--- a/mayoralnext/styles/ProductList/productList.module.css
+++ b/mayoralnext/styles/ProductList/productList.module.css
@@ -9,3 +9,15 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 2rem;
 }
+
+@media (max-width: 960px) {
+    .content{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 480px) {
+    .content{
+        grid-template-columns: 1fr;
+    }
+}
